Fixed an alignment issue with the bootstrap css. Added a basic footer to the page. Completed static link to one fish.

--- a/RPi_WebServer/static/css/airfishbowl-rpi.css
+++ b/RPi_WebServer/static/css/airfishbowl-rpi.css
@@ -211,3 +211,7 @@ body {
 		right: 10px;
 	}
 }
+
+#footer {
+	margin: 10px 0px 0px 0px;
+}
