--- a/RPi_WebServer/static/css/bootstrap-responsive.css
+++ b/RPi_WebServer/static/css/bootstrap-responsive.css
@@ -475,7 +475,7 @@
   [class*="span"] {
     float: left;
     min-height: 1px;
-    margin-left: 20px;
+    /* margin-left: 20px; */
   }
   .container,
   .navbar-static-top .container,
