--- a/RPi_WebServer/static/css/bootstrap.css
+++ b/RPi_WebServer/static/css/bootstrap.css
@@ -282,7 +282,7 @@ a:focus {
 [class*="span"] {
   float: left;
   min-height: 1px;
-  margin: 20px;
+  /* margin: 20px; */
 }
 
 .container,
